# ClassProject

./: CMakeLists.txt  README.md  libncurses.dylib  main.cpp
.github/workflows/: scorecard.yml
